--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
